# bazel-examples

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  renovate.json
.github/actions/run_docker_compose/: action.yml
.github/workflows/: ci.yml
rdkafka-sys/: .bazelrc  BUILD.bazel  BUILD.rdkafka.bazel  MODULE.bazel  README.md  compose.yaml  librdkafka-0001-Remove-upward-folder-traversal.patch
rdkafka-sys/tests/: README.md  test_low_consumers.rs  utils.rs
rustls-openssl-fips/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  test.yaml
rustls-openssl-fips/tests/: README.md  it.rs  server.rs
