load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "default_test_runner",
    "integration_test_utils",
)

default_test_runner(
    name = "default_test_runner",
)

bazel_integration_test(
    name = "rustls_openssl_fips",
    bazel_version = bazel_binaries.versions.current,
    test_runner = ":default_test_runner",
    workspace_path = "rustls-openssl-fips",
)

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "rustls_openssl_fips",
        bazel_binaries.versions.all,
    ),
    visibility = ["//:__subpackages__"],
)
