bazel_dep(name = "cgrindel_bazel_starlib", version = "0.25.2", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.32.0", dev_dependency = True)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")
